kubernetes/main/apps/database/cnpg-barman-plugin/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plugin-barman-cloud
  namespace: database
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: plugin-barman-cloud
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudnative-pg
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
